colcon_ws/log/build_2022-09-13_04-38-59/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In constructor ‘gatekeeper::Gatekeeper::Gatekeeper()’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:44:3: error: ‘assume_free_space’ was not declared in this scope
   44 |   assume_free_space();
      |   ^~~~~~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: At global scope:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:56:6: error: no declaration matches ‘void gatekeeper::Gatekeeper::assume_free_space()’
   56 | void Gatekeeper::assume_free_space(){
      |      ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:56:6: note: no functions named ‘void gatekeeper::Gatekeeper::assume_free_space()’
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:37:7: note: ‘class gatekeeper::Gatekeeper’ defined here
   37 | class Gatekeeper : public rclcpp::Node {
      |       ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:249:6: error: no declaration matches ‘void gatekeeper::Gatekeeper::publish_free_pcl()’
  249 | void Gatekeeper::publish_free_pcl() {
      |      ^~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:249:6: note: no functions named ‘void gatekeeper::Gatekeeper::publish_free_pcl()’
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:37:7: note: ‘class gatekeeper::Gatekeeper’ defined here
   37 | class Gatekeeper : public rclcpp::Node {
      |       ^~~~~~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
